--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
   <meta charset="UTF-8" />
@@ -7,9 +7,11 @@
   <title>Portfólio Pessoal</title>
   <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="css/style.css" />
+  <script type="text/javascript" src="script.js"></script>
 </head> 
 
 <body>
+
   <div class="container">
     <div class="profile box">
       <img class="profile-pic" src="img/99387388.png" alt="Profile" />
@@ -24,18 +26,22 @@
           <a href="#"><img src="img/whatsapp.svg" alt="WhatsApp" /></a>
         </li>
         <li>
-          <a href="#"><img src="img/linkedin.svg" alt="LinkedIn" /></a>
+          <a href="#"><img src="img/linkedin.svg" alt="LinkedIn"/></a>
         </li>
+        
         
       </ul>
     </div>
     <div class="portfolio box">
-      <h1 class="title">Portfólio</h1>
+      <h1 class="title">Projetos</h1>
+      <strong>
+        <p class="clique">Clique nas imagens para ver!</p>
+      </strong>
       <ul>
         <li>
-          <img src="img/1.jpg" alt="1" />
+          <a href="https://Evanilsonpg.github.io/projeto-android/"><img src="img/1.jpg" alt="1" /></a>
           <div>
-            <h2>Criação de Website</h2>
+            <h2>Projeto Android</h2>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
               eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
