adicionando links nas imagens

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           </div>
         </li>
         <li>
-          <img src="img/2.jpg" alt="2" />
+          <a href="#"><img src="img/2.jpg" alt="2" /></a>
           <div>
             <h2>Design de Interface</h2>
             <p>
@@ -63,7 +63,7 @@
           </div>
         </li>
         <li>
-          <img src="img/3.jpg" alt="3" />
+          <a href="#"><img src="img/3.jpg" alt="3" /></a>
           <div>
             <h2>Identidade Visual</h2>
             <p>
