--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <li>
           <a href="#"><img src="img/2.jpg" alt="2" /></a>
           <div>
-            <h2>Design de Interface</h2>
+            <h2>Poema de Milton Duarte</h2>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
               eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
@@ -65,7 +65,7 @@
         <li>
           <a href="#"><img src="img/3.jpg" alt="3" /></a>
           <div>
-            <h2>Identidade Visual</h2>
+            <h2>Clone do Spotify</h2>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
               eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
