adicionando itens no portfólio

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <!--link css-->
   <link rel="stylesheet" href="css/style.css" />
 
+  <!--link dos icones utilizados-->
   <script src="https://kit.fontawesome.com/8dd542139c.js" crossorigin="anonymous"></script>
   
 </head> 
@@ -39,6 +40,7 @@
       <a href="#"><i class="textoBranco icones fab fa-instagram"></i></a>
 
     </div>
+    <!--Fim da tela de início-->
 
     <!--Minhas Habilidades-->
 
@@ -52,6 +54,7 @@
       <i id="react" class="fab fa-react"></i>
 
     </div>
+    <!--Fim das minhas habilidades-->
 
 
     <!--Meus Projetos-->
@@ -62,47 +65,48 @@
       <h1 class="title">Projetos</h1>
 
       <strong>
-        <p class="clique">Clique nas imagens para ver!</p>
+        <p class="clique">Clique nas imagens para ver os projetos!</p>
       </strong>
 
       <ul>
 
         <li>
           <a href="https://Evanilsonpg.github.io/projeto-android/"><img src="img/projeto android.webp" alt="1" /></a>
-          <div>
-            <h2>Projeto Android</h2>
-            <p>
-              Este é meu projeto onde fiz baseado na história da criadora do android <strong>Irina Block</strong>.
-            </p>
-          </div>
+          
+            <div>
+              <h2>Projeto Android</h2>
+              <p>
+                Este é meu projeto onde fiz baseado na história da criadora do android <strong>Irina Block</strong>.
+              </p>
+            </div>
+
+            <a class="ver-projeto" href="https://Evanilsonpg.github.io/projeto-android/" target="blank">Ver Projeto</a>
+          
         </li>
 
         <li>
-          <a href="#"><img src="img/2.jpg" alt="2" /></a>
+          <a href="#"><img src="img/Milton Duarte.jpg" alt="2" /></a>
           <div>
             <h2>Poema de Milton Duarte</h2>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
-              nisi ut aliquip.
+            <p  class="milton-duarte">
+              Projeto que criei abordando uma das principais falas do poeta <strong>Milton Duarte</strong> onde ele fala da tecnologia que esta sercando o mundo.
             </p>
           </div>
+          <a class="cordel-milton" href="#">Ver Projeto</a>
         </li>
         <li>
-          <a href="#"><img src="img/3.jpg" alt="3" /></a>
+          <a href="#"><img src="img/spotify.jpg" alt="3" /></a>
           <div>
             <h2>Clone do Spotify</h2>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
-              nisi ut aliquip.
+            <p class="spotify">
+              Refiz o <strong>Spotify</strong> baseado no modelo original, porém com imagens novas e novas funcionalidades.
             </p>
           </div>
+          <a class="ver-projeto" href="#">Ver Projeto</a>
         </li>
       </ul>
     </div>
+    <!--Fim dos meus Projetos-->
 
 
     <!--Footer do site-->
