adicionando links nas redes sociais

--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
 
       <h3>Redes Sociais</h3>
 
-      <a href="#"><i class="textoBranco fab fa-linkedin"></i></a>
-      <a href="#"><i class="textoBranco icones fab fa-github"></i></a>
-      <a href="#"><i class="textoBranco icones fab fa-instagram"></i></a>
+      <a href="https://www.linkedin.com/in/evanilson-rodrigues-73582722b/" target="blank"><i class="textoBranco fab fa-linkedin"></i></a>
+      <a href="https://github.com/Evanilsonpg" target="blank"><i class="textoBranco icones fab fa-github"></i></a>
+      <a href="https://www.instagram.com/dev.nilson/" target="blank"><i class="textoBranco icones fab fa-instagram"></i></a>
 
     </div>
     <!--Fim da tela de início-->
@@ -56,9 +56,18 @@
     </div>
     <!--Fim das minhas habilidades-->
 
+    <!--Descrição-->
+    <div class="portfolio box">
+      <h2>Descrição</h2>
+
+      <p>Olá meu nome é Evanilson Alves Rodrigues, tenho 18 anos. Sou um Dev Front-end Júnior com desejo de atuar em grandes empresas para mostrar o meu potencial, me considero ágil e consistente em aprender uma nova linguagem e mim adaptar a qualquer mudança, pronto para superar qualquer desafio!  </p>
+
+    </div>
+    <!--Fim da descrição-->
+
+
 
     <!--Meus Projetos-->
-
 
     <div class="portfolio box">
 
@@ -85,24 +94,24 @@
         </li>
 
         <li>
-          <a href="#"><img src="img/Milton Duarte.jpg" alt="2" /></a>
+          <a href="https://evanilsonpg.github.io/projeto-cordel/"><img src="img/Milton Duarte.jpg" alt="2" /></a>
           <div>
             <h2>Poema de Milton Duarte</h2>
             <p  class="milton-duarte">
               Projeto que criei abordando uma das principais falas do poeta <strong>Milton Duarte</strong> onde ele fala da tecnologia que esta sercando o mundo.
             </p>
           </div>
-          <a class="cordel-milton" href="#">Ver Projeto</a>
+          <a class="cordel-milton" href="https://evanilsonpg.github.io/projeto-cordel/" target="blank">Ver Projeto</a>
         </li>
         <li>
-          <a href="#"><img src="img/spotify.jpg" alt="3" /></a>
+          <a href="https://evanilsonpg.github.io/Clone-Spotify/"><img src="img/spotify.jpg" alt="3" /></a>
           <div>
             <h2>Clone do Spotify</h2>
             <p class="spotify">
               Refiz o <strong>Spotify</strong> baseado no modelo original, porém com imagens novas e novas funcionalidades.
             </p>
           </div>
-          <a class="ver-projeto" href="#">Ver Projeto</a>
+          <a class="ver-projeto" href="https://evanilsonpg.github.io/Clone-Spotify/" target="blank">Ver Projeto</a>
         </li>
       </ul>
     </div>
