--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Portfólio Pessoal</title>
-  <!--link da fonte-->
+  <!--link das fontes-->
   <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap" rel="stylesheet" />
+
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css">
   <!--link css-->
   <link rel="stylesheet" href="css/style.css" />
 
@@ -16,6 +18,9 @@
 </head> 
 
 <body>
+
+  <!--Scroll-->
+  <a class="gotopbtn" href="#"> <i class="fas fa-arrow-up"></i> </a> 
 
   <!--Div de todo o container-->
 
