adicionando estilos e o javascript.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
   <!--link das fontes-->
   <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap" rel="stylesheet" />
 
+  <!--Link Scrollreveal-->
+  <script src="https://unpkg.com/scrollreveal"></script>
+
+  <!--Link dos icones-->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css">
+
   <!--link css-->
   <link rel="stylesheet" href="css/style.css" />
 
@@ -84,7 +89,7 @@
 
       <ul>
 
-        <li>
+        <li class="area-1">
           <a href="https://Evanilsonpg.github.io/projeto-android/"><img src="img/projeto android.webp" alt="1" /></a>
           
             <div>
@@ -98,7 +103,7 @@
           
         </li>
 
-        <li>
+        <li class="area-2">
           <a href="https://evanilsonpg.github.io/projeto-cordel/"><img src="img/Milton Duarte.jpg" alt="2" /></a>
           <div>
             <h2>Poema de Milton Duarte</h2>
@@ -108,7 +113,7 @@
           </div>
           <a class="cordel-milton" href="https://evanilsonpg.github.io/projeto-cordel/" target="blank">Ver Projeto</a>
         </li>
-        <li>
+        <li class="area-3">
           <a href="https://evanilsonpg.github.io/Clone-Spotify/"><img src="img/spotify.jpg" alt="3" /></a>
           <div>
             <h2>Clone do Spotify</h2>
@@ -127,6 +132,9 @@
     <p class="copyright">© 2022 Evanilson Alves Rodrigues</p>
 
   </div>
+
+  <!--Link JavaScript-->
+  <script src="script.js"></script>
 
 </body>
 
